--- a/site.yml
+++ b/site.yml
@@ -1,3 +1,3 @@
 # TWEAK THESE SETTINGS, ESPECIALLY USER AND REPO
-title: Interactive analytics and data visualisation in R
+title: Data visualisation, interactive data analysis, statistical programming
 github: {user: garthtarr, repo: visR}
